[package]
name = "casino"
version = "1.1.1"
edition = "2021"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
text2art = { version = "1.0.1", features = []}
clearscreen = { version = "1.0.10", features = []}
rand = { version = "0.8.5", features = [] }